Fixed issue where second image would appear behind detail view if the image loaded in after the page had been minimized

--- a/src/styles/match.scss
+++ b/src/styles/match.scss
@@ -285,6 +285,11 @@ body {
 
 	.next-poster {
 		z-index: 9;
+		display: block;
+
+		&.hidden {
+			display: none;
+		}
 	}
 
 	.liked {
